# AlphaSight

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-production.txt  requirements.txt
.github/workflows/: ci.yml  manual-pipeline.yml
.kiro/specs/nifty-50-ml-pipeline/: design.md  requirements.md  tasks.md
config/: manager.py  settings.py  validator.py
config/environments/: production.env  staging.env
deployment_packages/nifty_ml_pipeline_deployment_20250806_073240/: .env.production.template  setup.py
deployment_packages/nifty_ml_pipeline_deployment_20250806_073240/config/: settings.py
deployment_packages/nifty_ml_pipeline_deployment_20250806_073240/scripts/: finalize_deployment.py  security_audit.py  test_config.py
deployment_packages/nifty_ml_pipeline_deployment_20250806_073309/: DEPLOYMENT.md  README.md
deployment_packages/nifty_ml_pipeline_deployment_20250806_073309/config/: production.py  production_secure.py
deployment_packages/nifty_ml_pipeline_deployment_20250806_073309/nifty_ml_pipeline/: main.py
deployment_reports/: final_optimization_summary_20250806_073310.txt
docs/api/: README.md
docs/deployment/: README.md  performance-tuning.md
docs/performance/: memory-optimization.md
examples/: data_collection_demo.py
nifty_ml_pipeline/: __init__.py  main.py
nifty_ml_pipeline/data/: __init__.py  collectors.py  models.py  storage.py
nifty_ml_pipeline/features/: sentiment_analysis.py
nifty_ml_pipeline/models/: inference_engine.py  predictor.py  validator.py
nifty_ml_pipeline/orchestration/: __init__.py  controller.py  performance_monitor.py
nifty_ml_pipeline/output/: __init__.py
scripts/: performance_profiler.py
security_reports/: security_report_20250806_072919.txt
tests/: TASK_10_1_VALIDATION_SUMMARY.md  test_config.py  test_data_models.py  test_end_to_end_validation.py  test_integration.py  test_main.py  test_performance_benchmarks.py  test_system_validation.py  test_system_validation_report.py
tests/data/: __init__.py  test_collectors.py  test_storage.py
tests/features/: __init__.py  test_feature_normalizer.py  test_sentiment_analysis.py  test_technical_indicators.py
tests/models/: __init__.py  test_inference_engine.py  test_predictor.py  test_validator.py
tests/orchestration/: __init__.py  test_controller.py  test_error_handler.py  test_performance_monitor.py  test_scheduler.py
tests/output/: __init__.py  test_performance_reporter.py  test_prediction_formatter.py  test_prediction_storage.py
tests/utils/: test_helpers.py
(+24 files in other folders)
