[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nifty-ml-pipeline"
version = "0.1.0"
description = "A CPU-optimized machine learning pipeline for predicting NIFTY 50 index movements"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NIFTY ML Pipeline Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.24.4",
    "scikit-learn==1.3.2",
    "xgboost==2.0.3",
    "nsepy==0.8",
    "yfinance==0.2.28",
    "nltk==3.8.1",
    "vaderSentiment==3.3.2",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "schedule==1.2.1",
    "requests==2.31.0",
    "python-dateutil==2.8.2",
    "pyarrow==14.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "isort>=5.13.2",
]

[project.scripts]
nifty-ml-pipeline = "nifty_ml_pipeline.main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nifty_ml_pipeline", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=nifty_ml_pipeline",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["nifty_ml_pipeline"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]